# polymarket-sports-mm

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
src/sfmm/: __init__.py  cli.py  config.py
src/sfmm/bridge/: sf.py
src/sfmm/core/: scoring.py  types.py
src/sfmm/engine/: live.py  pregame.py  quoter.py
src/sfmm/execution/: clob.py
src/sfmm/feeds/: calendar.py  orderbook.py
src/sfmm/risk/: circuit.py  limits.py
tests/: test_quoter.py  test_scoring.py
