[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfmm"
version = "0.1.0"
description = "Sports market making bot for Polymarket liquidity rewards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SimpleFunctions", email = "hello@simplefunctions.dev" },
]
keywords = [
    "polymarket", "market-making", "sports-betting", "liquidity",
    "prediction-markets", "defi", "polygon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "py-clob-client>=0.15",
    "simplefunctions-ai>=0.1",
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
models = [
    "numpy>=1.24",
    "scipy>=1.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sfmm = "sfmm.cli:main"

[project.urls]
Homepage = "https://github.com/spfunctions/polymarket-sports-mm"
Repository = "https://github.com/spfunctions/polymarket-sports-mm"

[tool.hatch.build.targets.wheel]
packages = ["src/sfmm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
